[gd_scene load_steps=87 format=3 uid="uid://bowyrk73sc864"]

[ext_resource type="Script" path="res://components/Entities/enemies/skeleton_sword_shield/scripts/SkeletonStateMachine.gd" id="1_88id4"]
[ext_resource type="Script" path="res://components/Entities/enemies/skeleton_sword_shield/skeleton_sword_shield.gd" id="1_rtwge"]
[ext_resource type="Script" path="res://components/Entities/enemies/skeleton_sword_shield/scripts/MovementSystem.gd" id="1_tnsno"]
[ext_resource type="Script" path="res://components/Entities/enemies/skeleton_sword_shield/scripts/states/Idle.gd" id="2_n35yy"]
[ext_resource type="Script" path="res://components/Entities/enemies/skeleton_sword_shield/scripts/states/FollowPlayer.gd" id="3_oou72"]
[ext_resource type="Script" path="res://components/shared/scripts/actors/states/functionality/StaggerDetector.gd" id="4_frxp5"]
[ext_resource type="Script" path="res://components/Entities/enemies/skeleton_sword_shield/scripts/states/functionality/PathingToggler.gd" id="4_u4g74"]
[ext_resource type="Script" path="res://components/shared/scripts/actors/states/functionality/FollowTarget.gd" id="5_v6d1d"]
[ext_resource type="Script" path="res://components/shared/scripts/actors/states/Staggered.gd" id="8_0mbqg"]
[ext_resource type="Script" path="res://components/shared/scripts/skills/Health.gd" id="8_1svyc"]
[ext_resource type="Script" path="res://components/shared/scripts/actors/states/functionality/BlockingDecision.gd" id="8_dbsrh"]
[ext_resource type="Script" path="res://components/shared/scripts/actors/states/NpcStartBlocking.gd" id="9_4w3kd"]
[ext_resource type="Script" path="res://components/shared/scripts/helpers/TimedFunctionExecutor.gd" id="9_dmi5j"]
[ext_resource type="Texture2D" uid="uid://uac4r25n1ftp" path="res://sprites/enemies/skeleton 1 idle animation simple-Sheet.png" id="10_4nhjn"]
[ext_resource type="Texture2D" uid="uid://d5wgl1bawg2k" path="res://sprites/enemies/skeleton attack anim-Sheet fix.png" id="10_5628u"]
[ext_resource type="Script" path="res://components/shared/scripts/actors/states/NpcFinishBlocking.gd" id="10_dco5p"]
[ext_resource type="Script" path="res://components/shared/scripts/hitboxes/Hurtbox.gd" id="10_h0l05"]
[ext_resource type="Texture2D" uid="uid://bwmxr2vu6inbq" path="res://sprites/enemies/skeleton 1 dying animation -Sheet.png" id="11_clf1k"]
[ext_resource type="Texture2D" uid="uid://cdoipa0mibb40" path="res://sprites/enemies/skeleton 1 walking animation walk-Sheet.png" id="11_l1bwu"]
[ext_resource type="Script" path="res://components/shared/scripts/animations/NpcSprite3DAnimator.gd" id="11_we6oi"]
[ext_resource type="Texture2D" uid="uid://c3s4slt47m377" path="res://sprites/enemies/skeleton 1 taking hit animation -Sheet.png" id="12_q7olw"]
[ext_resource type="Script" path="res://components/shared/scripts/actors/states/Blocking.gd" id="13_bd8kh"]
[ext_resource type="Script" path="res://components/shared/scripts/sounds/DamageSounds.gd" id="13_kisgm"]
[ext_resource type="Script" path="res://components/shared/scripts/actors/states/BlockStagger.gd" id="14_ekyqy"]
[ext_resource type="Texture2D" uid="uid://lxm8tcnahu14" path="res://sprites/enemies/skeleton 1 blocking idle 2-Sheet.png" id="16_jvc1h"]
[ext_resource type="Texture2D" uid="uid://brt1i0b0gvnmq" path="res://sprites/enemies/skeleton 1 blocking raise shield 2-Sheet.png" id="16_qsrmq"]
[ext_resource type="Texture2D" uid="uid://dcpbq40ehd0bn" path="res://sprites/enemies/skeleton 1 blocking raise shield 2 reversed-Sheet.png" id="17_37afq"]
[ext_resource type="Script" path="res://components/shared/scripts/sounds/SpriteBasedMovementSound.gd" id="17_dmf0n"]
[ext_resource type="Texture2D" uid="uid://nqvchf2xskm2" path="res://sprites/enemies/skeleton 1 blocking recieveing a hit-Sheet.png" id="19_py7xr"]
[ext_resource type="Script" path="res://components/shared/scripts/sounds/BlockSounds.gd" id="28_1rj8p"]
[ext_resource type="Script" path="res://components/shared/scripts/hitboxes/NpcBlockHitbox.gd" id="28_wbxbu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2njuu"]
radius = 0.25
height = 1.25

[sub_resource type="SphereShape3D" id="SphereShape3D_bwy57"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_x6pf4"]
atlas = ExtResource("10_5628u")
region = Rect2(0, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_icuqd"]
atlas = ExtResource("10_5628u")
region = Rect2(116, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_8blaa"]
atlas = ExtResource("10_5628u")
region = Rect2(232, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdeft"]
atlas = ExtResource("10_5628u")
region = Rect2(348, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_32wcn"]
atlas = ExtResource("10_5628u")
region = Rect2(464, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs25p"]
atlas = ExtResource("10_5628u")
region = Rect2(580, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y43t"]
atlas = ExtResource("10_5628u")
region = Rect2(696, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_app8g"]
atlas = ExtResource("10_5628u")
region = Rect2(812, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhjd8"]
atlas = ExtResource("10_5628u")
region = Rect2(928, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsi3n"]
atlas = ExtResource("16_jvc1h")
region = Rect2(0, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd5mh"]
atlas = ExtResource("16_jvc1h")
region = Rect2(116, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_qai3e"]
atlas = ExtResource("17_37afq")
region = Rect2(0, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpneb"]
atlas = ExtResource("17_37afq")
region = Rect2(116, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_detmu"]
atlas = ExtResource("17_37afq")
region = Rect2(232, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqyn0"]
atlas = ExtResource("17_37afq")
region = Rect2(348, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6a33"]
atlas = ExtResource("19_py7xr")
region = Rect2(232, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_spujr"]
atlas = ExtResource("19_py7xr")
region = Rect2(348, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0d6d"]
atlas = ExtResource("19_py7xr")
region = Rect2(464, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xfbs"]
atlas = ExtResource("16_qsrmq")
region = Rect2(0, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybkdq"]
atlas = ExtResource("16_qsrmq")
region = Rect2(116, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_odjt8"]
atlas = ExtResource("16_qsrmq")
region = Rect2(232, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uamv"]
atlas = ExtResource("16_qsrmq")
region = Rect2(348, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wsr6"]
atlas = ExtResource("11_clf1k")
region = Rect2(0, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4rqg"]
atlas = ExtResource("11_clf1k")
region = Rect2(116, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtcof"]
atlas = ExtResource("11_clf1k")
region = Rect2(232, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sky6"]
atlas = ExtResource("11_clf1k")
region = Rect2(348, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvnps"]
atlas = ExtResource("11_clf1k")
region = Rect2(464, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6udg"]
atlas = ExtResource("11_clf1k")
region = Rect2(580, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnfpb"]
atlas = ExtResource("11_clf1k")
region = Rect2(696, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc50l"]
atlas = ExtResource("11_clf1k")
region = Rect2(812, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx3qu"]
atlas = ExtResource("11_clf1k")
region = Rect2(928, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufvut"]
atlas = ExtResource("11_clf1k")
region = Rect2(1044, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_jy0qr"]
atlas = ExtResource("11_clf1k")
region = Rect2(1160, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1rwk"]
atlas = ExtResource("11_clf1k")
region = Rect2(1276, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_53sfs"]
atlas = ExtResource("11_clf1k")
region = Rect2(1392, 13, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_73gec"]
atlas = ExtResource("10_4nhjn")
region = Rect2(0, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa5y6"]
atlas = ExtResource("10_4nhjn")
region = Rect2(116, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cw84"]
atlas = ExtResource("12_q7olw")
region = Rect2(232, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hdsn"]
atlas = ExtResource("12_q7olw")
region = Rect2(348, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7j7k"]
atlas = ExtResource("12_q7olw")
region = Rect2(116, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7akrl"]
atlas = ExtResource("12_q7olw")
region = Rect2(0, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_83qmx"]
atlas = ExtResource("11_l1bwu")
region = Rect2(0, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3586"]
atlas = ExtResource("11_l1bwu")
region = Rect2(116, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_u47gi"]
atlas = ExtResource("11_l1bwu")
region = Rect2(232, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f84j"]
atlas = ExtResource("11_l1bwu")
region = Rect2(348, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_knd4u"]
atlas = ExtResource("11_l1bwu")
region = Rect2(464, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu24i"]
atlas = ExtResource("11_l1bwu")
region = Rect2(580, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uyug"]
atlas = ExtResource("11_l1bwu")
region = Rect2(696, 15, 116, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_263wa"]
atlas = ExtResource("11_l1bwu")
region = Rect2(812, 15, 116, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_37v2e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6pf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icuqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8blaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdeft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32wcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs25p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y43t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_app8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhjd8")
}],
"loop": true,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsi3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd5mh")
}],
"loop": true,
"name": &"block",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qai3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpneb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_detmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqyn0")
}],
"loop": false,
"name": &"block_end",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6a33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spujr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0d6d")
}],
"loop": false,
"name": &"block_stagger",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xfbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybkdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odjt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uamv")
}],
"loop": false,
"name": &"block_start",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wsr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4rqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtcof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sky6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvnps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6udg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnfpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc50l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx3qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufvut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jy0qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1rwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53sfs")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_73gec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa5y6")
}],
"loop": true,
"name": &"idle",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cw84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hdsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7j7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7akrl")
}],
"loop": false,
"name": &"staggered",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83qmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3586")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u47gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f84j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knd4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu24i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uyug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_263wa")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_4qg3t"]
size = Vector3(0.2, 1.14, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_gii7r"]
size = Vector3(0.6, 0.97, 0.6)

[sub_resource type="BoxMesh" id="BoxMesh_lwqfl"]
size = Vector3(0.625, 0.97, 0.735)

[node name="skeleton_sword_shield" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 41
script = ExtResource("1_rtwge")
base_stagger_time_s = 0.4
block_duration_base = 2.0
metadata/WalkSpeed = 1.0

[node name="SkeletonStateMachine" type="Node" parent="."]
script = ExtResource("1_88id4")

[node name="Idle" type="Node" parent="SkeletonStateMachine"]
script = ExtResource("2_n35yy")
metadata/DetectionSphere = NodePath("../../DetectionSphere")

[node name="StaggerDetector" type="Node" parent="SkeletonStateMachine/Idle"]
script = ExtResource("4_frxp5")
npc_path = NodePath("../../..")

[node name="CombatFollow" type="Node" parent="SkeletonStateMachine"]
script = ExtResource("3_oou72")

[node name="PathingToggler" type="Node" parent="SkeletonStateMachine/CombatFollow"]
script = ExtResource("4_u4g74")
metadata/RayCastPhysical = NodePath("../../../RayCastPhysical")
metadata/NavigationAgent3D = NodePath("../../../NavigationAgent3D")
metadata/NPCPath = NodePath("../../..")

[node name="FollowTarget" type="Node" parent="SkeletonStateMachine/CombatFollow"]
script = ExtResource("5_v6d1d")

[node name="StaggerDetector" type="Node" parent="SkeletonStateMachine/CombatFollow"]
script = ExtResource("4_frxp5")
npc_path = NodePath("../../..")

[node name="BlockingDecision" type="Node" parent="SkeletonStateMachine/CombatFollow"]
script = ExtResource("8_dbsrh")

[node name="TimedFunctionExecutor" type="Node" parent="SkeletonStateMachine/CombatFollow/BlockingDecision"]
script = ExtResource("9_dmi5j")

[node name="Staggered" type="Node" parent="SkeletonStateMachine"]
script = ExtResource("8_0mbqg")

[node name="StartBlocking" type="Node" parent="SkeletonStateMachine"]
script = ExtResource("9_4w3kd")
npc_path = NodePath("../..")

[node name="FinishBlocking" type="Node" parent="SkeletonStateMachine"]
script = ExtResource("10_dco5p")
npc_path = NodePath("../..")

[node name="Blocking" type="Node" parent="SkeletonStateMachine"]
script = ExtResource("13_bd8kh")
npc_path = NodePath("../..")

[node name="BlockStagger" type="Node" parent="SkeletonStateMachine"]
script = ExtResource("14_ekyqy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.573249, 0)
shape = SubResource("CapsuleShape3D_2njuu")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 1.5
target_desired_distance = 0.5
path_postprocessing = 1

[node name="MovementSystem" type="Node" parent="."]
script = ExtResource("1_tnsno")
metadata/NpcNode = NodePath("..")
metadata/NavigationAgent = NodePath("../NavigationAgent3D")

[node name="DetectionSphere" type="Area3D" parent="."]
collision_layer = 64
collision_mask = 33

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionSphere"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.521411, 0)
shape = SubResource("SphereShape3D_bwy57")

[node name="RayCastPhysical" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.968163, 0.0231069)
debug_shape_custom_color = Color(0.972549, 0.266667, 0.235294, 1)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.693329, 0)
modulate = Color(0.976471, 0.976471, 0.976471, 1)
pixel_size = 0.0125
billboard = 2
shaded = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_37v2e")
animation = &"block_stagger"
frame = 2
frame_progress = 1.0

[node name="NpcSpriteAnimator" type="Node" parent="AnimatedSprite3D"]
script = ExtResource("11_we6oi")
npc_node_path = NodePath("../..")

[node name="Skills" type="Node" parent="."]

[node name="Health" type="Node" parent="Skills"]
script = ExtResource("8_1svyc")
level = 6
skill_name = "Health"
description = "Determines how much hitpoints the entity has."

[node name="Hurtbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.59138, 0)
collision_layer = 128
collision_mask = 4
priority = 1
script = ExtResource("10_h0l05")
health_node_path = NodePath("../Skills/Health")
hurtbox_trigger_limit_ms = 150
parent_entity_path = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("BoxShape3D_4qg3t")

[node name="Sounds" type="Node" parent="."]

[node name="DamageSounds" type="Node" parent="Sounds" node_paths=PackedStringArray("audio_stream")]
script = ExtResource("13_kisgm")
audio_stream = NodePath("../../SoundStreams/DmgSounds")
damage_sounds = ["res://sounds/enemies/skeleton/damage/impact_01.wav", "res://sounds/enemies/skeleton/damage/impact_02.wav", "res://sounds/enemies/skeleton/damage/impact_03.wav", "res://sounds/enemies/skeleton/damage/impact_04.wav"]

[node name="Attacks" type="Node" parent="Sounds"]

[node name="WeaponHitSounds" type="Node" parent="Sounds"]

[node name="SpriteBasedMovementSound" type="Node" parent="Sounds"]
script = ExtResource("17_dmf0n")
sprite_path = NodePath("../../AnimatedSprite3D")
stream_path = NodePath("../../SoundStreams/WalkSounds")
footstep_sounds = ["res://sounds/enemies/skeleton/footsteps/FEETHmn_Footstep Stone Explorer Run Fast Dirt Outside 03_ESM_DGF.wav", "res://sounds/enemies/skeleton/footsteps/FEETHmn_Footstep Stone Explorer Run Fast Dirt Outside 06_ESM_DGF.wav", "res://sounds/enemies/skeleton/footsteps/FEETHmn_Footstep Stone Explorer Walk Faster Dirt Outside 05_ESM_DGF.wav", "res://sounds/enemies/skeleton/footsteps/FEETHmn_Footstep Stone Explorer Walk Faster Dirt Outside 07_ESM_DGF.wav"]
relevant_animation = "walk"
relevant_frames = [1, 5]

[node name="BlockSounds" type="Node" parent="Sounds"]
script = ExtResource("28_1rj8p")
block_hitbox_path = NodePath("../../NpcBlockHitbox")
audio_stream_path = NodePath("../../SoundStreams/BlockSounds")
block_sounds_paths = ["res://sounds/shields/metal/METLImpt_Impact Metal Blunt 02_DDUMAIS_NONE.wav", "res://sounds/shields/metal/METLImpt_Impact Metal Blunt 04_DDUMAIS_NONE.wav", "res://sounds/shields/metal/METLImpt_Impact Metal Blunt 05_DDUMAIS_NONE.wav", "res://sounds/shields/metal/METLImpt_Impact Metal Blunt 10_DDUMAIS_NONE.wav"]

[node name="SoundStreams" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.673566, 0)

[node name="DmgSounds" type="AudioStreamPlayer3D" parent="SoundStreams"]
volume_db = -10.062

[node name="WalkSounds" type="AudioStreamPlayer3D" parent="SoundStreams"]
volume_db = -22.506

[node name="BlockSounds" type="AudioStreamPlayer3D" parent="SoundStreams"]
volume_db = -27.151

[node name="NpcBlockHitbox" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 4
script = ExtResource("28_wbxbu")
parent_entity_path = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NpcBlockHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.557945, 0)
shape = SubResource("BoxShape3D_gii7r")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="NpcBlockHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.557945, 0)
visible = false
mesh = SubResource("BoxMesh_lwqfl")
skeleton = NodePath("")

[connection signal="state_changed" from="SkeletonStateMachine" to="AnimatedSprite3D/NpcSpriteAnimator" method="_on_skeleton_state_machine_state_changed"]
[connection signal="state_changed" from="SkeletonStateMachine" to="Hurtbox" method="_on_state_changed"]
[connection signal="state_changed" from="SkeletonStateMachine" to="NpcBlockHitbox" method="_on_state_changed"]
[connection signal="request_state_change" from="SkeletonStateMachine/Idle" to="SkeletonStateMachine" method="_on_request_state_change"]
[connection signal="move_npc" from="SkeletonStateMachine/CombatFollow" to="MovementSystem" method="_on_set_movement_target"]
[connection signal="request_state_change" from="SkeletonStateMachine/CombatFollow" to="SkeletonStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="SkeletonStateMachine/Staggered" to="SkeletonStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="SkeletonStateMachine/StartBlocking" to="SkeletonStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="SkeletonStateMachine/FinishBlocking" to="SkeletonStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="SkeletonStateMachine/Blocking" to="SkeletonStateMachine" method="_on_request_state_change"]
[connection signal="request_state_change" from="SkeletonStateMachine/BlockStagger" to="SkeletonStateMachine" method="_on_request_state_change"]
[connection signal="reached_zero_hp" from="Skills/Health" to="SkeletonStateMachine" method="_on_death"]
[connection signal="on_hit" from="Hurtbox" to="SkeletonStateMachine/Idle/StaggerDetector" method="_on_hit"]
[connection signal="on_hit" from="Hurtbox" to="SkeletonStateMachine/CombatFollow/StaggerDetector" method="_on_hit"]
[connection signal="on_hit" from="Hurtbox" to="Sounds/DamageSounds" method="_on_hit"]
[connection signal="on_hit" from="NpcBlockHitbox" to="SkeletonStateMachine/Blocking" method="_on_npc_block_hitbox_on_hit"]
[connection signal="on_hit" from="NpcBlockHitbox" to="Sounds/BlockSounds" method="_on_npc_block_hitbox_on_hit"]
